Fixed z-index on leftSidebar

--- a/wp-content/themes/woo-base/sass/_sidebar.scss
+++ b/wp-content/themes/woo-base/sass/_sidebar.scss
@@ -15,7 +15,7 @@
   padding: 1rem;
   position: fixed;
   left: -246px;
-  z-index: 1;
+  z-index: 2;
   transition: all 0.3s ease-in-out;
 
   label {
